saving the initial additions to html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brad's Portfolio</title>
     <link rel="stylesheet" href="./Assets/css/stylesheet.css">
-    
 </head>
 <body>
-    
+    <header class="header-banner">
+        <h1>
+            Welcome, my name is 
+            <br>
+            Brad Samuel.
+        </h1>
+        <h2>
+            I'm a developer based 
+            <br>
+            in New Jersey
+        </h2>
+    </header>
+    <nav class="side-nav">
+        <ul>
+            <li>
+                <a href="#home">Home</a>
+            </li>
+            <li>
+                <a href="#about">About</a>
+            </li>
+            <li>
+                <a href="#portfolio">Portfolio</a>
+            </li>
+            <li>
+                <a href="#experience">Experience</a>
+            </li>
+            <li>
+                <a href="#contact">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <main>
+        <section class="section-heading">
+            <h2>
+                About Me
+            </h2>
+            <p>
+                I am a software developer with a recent Certificate in Full Stack Development from Rutgers University. Previously, I have leveraged my political science and psychology background to utilize operative research methods for finding solutions to complex legal issues. In the tech sphere, I look to capitalize on this skill for learning new technologies which will be implemented for a more intuitive user experience on the web. With my newly developed skills in React Js, Javascript, CSS, and responsive web design, my aim is to not only create applications that provide for an impactful user experience but also contribute to a team that makes innovative advancements to web applications. Overall, I am excited to implement my skills as a software developer at a company where I can exhibit my passion, learn, and grow with a quality driven team to master the craft.
+            </p>
+        </section>
+        <section class="section-heading">
+            <h2>
+                Portfolio
+            </h2>
+        </section>
+        <section class="section-heading">
+            <h2>
+                Experience
+            </h2>
+        </section>
+        <section class="section-heading">
+            <h2>
+                Contact
+            </h2>
+        </section>
+    </main>
 </body>
 </html>
