saving additions of the side nav and altered main page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/012e94325c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header class="header-banner">
+    <header class="header-banner right-side">
         <h1>
             Welcome, my name is 
             <br>
@@ -42,7 +42,7 @@
                 <a href="#contact">Contact</a>
             </li>
         </ul>
-        <section>
+        <section class="socials-container">
             <ul>
                 <li>
                     <a href="https://www.linkedin.com/in/brad-samuel-251805/" target="_blank">
@@ -54,14 +54,21 @@
                         <i class="fab fa-github-alt"></i>
                     </a>
                 </li>
+                <li>
+                    <a href="mailto:bradsamuel97@gmail.com" target="_blank">
+                        <i class="fas fa-envelope"></i>
+                    </a>
+                </li>
             </ul>
         </section>
     </nav>
-    <main>
+    <main class="right-side">
         <section class="section-heading">
             <h2>
                 About Me
             </h2>
+        </section>
+        <section class="about-content">
             <p>
                 I am a developer with a recent certificate in full stack developmet from Rutgers University. I would say that I am a an inquisitive individual that is dedicted to not only learning new technologies and framewoks but also solving issues in general. My ambitious nature is always present when making intuitive and engaging web applications regardless of whether I am alone or contributing to a team.
                 <br>
@@ -89,6 +96,8 @@
             <h2>
                 Experience
             </h2>
+        </section>
+        <section class="experience-content">
             <h3>
                 Loss Mitigation Specialist
             </h3>
@@ -111,6 +120,8 @@
             <h2>
                 Skills
             </h2>
+        </section>
+        <section class="skills-list">
             <ul>
                 <li>HTML</li>
                 <li>CSS</li>
@@ -142,7 +153,9 @@
         </section>
     </main>
     <footer>
-
+        <p>
+            Copyright Brad Samuel © 2021 All rights received.
+        </p>
     </footer>
 </body>
 </html>
