--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
     </header>
     <nav class="side-nav">
         <ul>
-            <li>
-                <a href="#home">Home</a>
+            <li >
+                <a href="#home" class="nav-buttons">Home</a>
             </li>
             <li>
-                <a href="#about">About</a>
+                <a href="#about" class="nav-buttons">About</a>
             </li>
             <li>
-                <a href="#portfolio">Portfolio</a>
+                <a href="#portfolio" class="nav-buttons">Portfolio</a>
             </li>
             <li>
-                <a href="#experience">Experience</a>
+                <a href="#experience" class="nav-buttons">Experience</a>
             </li>
             <li>
-                <a href="#skills">Skills</a>
+                <a href="#skills" class="nav-buttons">Skills</a>
             </li>
             <li>
-                <a href="#contact">Contact</a>
+                <a href="#contact" class="nav-buttons">Contact</a>
             </li>
         </ul>
         <section class="socials-container">
