added background to header and changed font color for side nave

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <br>
             Brad Samuel.
         </h1>
-        <h2>
+        <h1>
             I'm a developer based 
             <br>
             in New Jersey
-        </h2>
+        </h1>
     </header>
     <nav class="side-nav">
         <ul>
@@ -63,29 +63,32 @@
         </section>
     </nav>
     <main class="right-side">
-        <section class="section-heading">
-            <h2>
-                About Me
-            </h2>
-        </section>
-        <section class="about-content">
-            <p>
-                I am a developer with a recent certificate in full stack developmet from Rutgers University. I would say that I am a an inquisitive individual that is dedicted to not only learning new technologies and framewoks but also solving issues in general. My ambitious nature is always present when making intuitive and engaging web applications regardless of whether I am alone or contributing to a team.
-                <br>
-                When I am not coding, I am most likely drawing photorealistic portraits or reading either a fictional or non-fictional book.
-            </p>
-            <h3>Interests</h3>
-            <ul>
-                <li>
-                    listening to all genere's of music
-                </li>
-                <li>
-                    attempting to cook
-                </li>
-                <li>
-                    watching football
-                </li>
-            </ul>
+        <section class="about-section">
+            <section class="section-heading">
+                <h2>
+                    About Me
+                </h2>
+            </section>
+            <section class="about-content">
+                <p>
+                    I am a developer with a recent certificate in full stack developmet from Rutgers University. I would say that I am a an inquisitive individual that is dedicted to not only learning new technologies and framewoks but also solving issues in general. My ambitious nature is always present when making intuitive and engaging web applications regardless of whether I am alone or contributing to a team.
+                    <br>
+                    When I am not coding, I am most likely drawing photorealistic portraits or reading either a fictional or non-fictional book.
+                </p>
+                <h3>Interests</h3>
+                <ul>
+                    <li>
+                        listening to all genere's of music
+                    </li>
+                    <li>
+                        attempting to cook
+                    </li>
+                    <li>
+                        watching football
+                    </li>
+                </ul>
+            </section>
+    
         </section>
         <section class="section-heading">
             <h2>
