saving additions to transitions on sidenav

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <button class="form-button" type="submit">Send</button>
         </section>
     </main>
-    <footer>
+    <footer class="right-side">
         <p>
             Copyright Brad Samuel © 2021 All rights received.
         </p>
