saving changes o section headings and adding in projects

--- a/index.html
+++ b/index.html
@@ -95,6 +95,20 @@
                 Portfolio
             </h2>
         </section>
+        <section class="project-container">
+            <h3 class="project-title">
+                WatchHub
+            </h3>
+            <a href="">
+                <img src="" alt="">
+            </a>
+            <p>
+
+            </p>
+            <ul>
+
+            </ul>
+        </section>
         <section class="section-heading">
             <h2>
                 Experience
