saving addition of portfolio section

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
             <h3 class="project-title">
                 WatchHub
             </h3>
-            <a href="">
-                <img src="" alt="">
+            <a href="https://watchub-jbs.herokuapp.com/" target="_blank">
+                <img src="https://images.pexels.com/photos/3945321/pexels-photo-3945321.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
             </a>
             <p>
 
