saving changes to placement of section heading

--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
                 <a href="#portfolio" class="nav-buttons">Portfolio</a>
             </li>
             <li>
-                <a href="#experience" class="nav-buttons">Experience</a>
-            </li>
-            <li>
                 <a href="#skills" class="nav-buttons">Skills</a>
             </li>
             <li>
@@ -62,14 +59,14 @@
             </ul>
         </section>
     </nav>
-    <main class="right-side">
+    <main>
         <section class="about-section">
             <section class="section-heading">
                 <h2>
                     About Me
                 </h2>
             </section>
-            <section class="about-content">
+            <section class="about-content right-side">
                 <p>
                     I am a developer with a recent certificate in full stack developmet from Rutgers University. I would say that I am a an inquisitive individual that is dedicted to not only learning new technologies and framewoks but also solving issues in general. My ambitious nature is always present when making intuitive and engaging web applications regardless of whether I am alone or contributing to a team.
                     <br>
@@ -95,12 +92,12 @@
                 Portfolio
             </h2>
         </section>
-        <section class="project-container">
+        <section class="project-container right-side">
             <h3 class="project-title">
                 WatchHub
             </h3>
             <a href="https://watchub-jbs.herokuapp.com/" target="_blank">
-                <img src="https://images.pexels.com/photos/3945321/pexels-photo-3945321.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                <img src="https://user-images.githubusercontent.com/48900910/122814465-37584a00-d2a2-11eb-9264-b6ee4682c53e.gif" alt="">
             </a>
             <p>
 
@@ -109,30 +106,7 @@
 
             </ul>
         </section>
-        <section class="section-heading">
-            <h2>
-                Experience
-            </h2>
-        </section>
-        <section class="experience-content">
-            <h3>
-                Loss Mitigation Specialist
-            </h3>
-            <p>
-                Shellpoint Mortgage Servicing, LLC
-                <br>
-                May 2020 - October 2020
-            </p>
-            <h3>
-                Legal Assistant
-            </h3>
-            <p>
-                RAS Citron
-                <br>
-                December 2019 - May 2020
-            </p>
-            <a class="button" href="">Download CV</a>
-        </section>
+
         <section class="section-heading">
             <h2>
                 Skills
@@ -173,6 +147,7 @@
         <p>
             Copyright Brad Samuel © 2021 All rights received.
         </p>
+        <a class="button" href="">Download CV</a>
     </footer>
 </body>
 </html>
