saving additions to skills and portfolio section

--- a/index.html
+++ b/index.html
@@ -97,14 +97,16 @@
                 WatchHub
             </h3>
             <a href="https://watchub-jbs.herokuapp.com/" target="_blank">
-                <img src="https://user-images.githubusercontent.com/48900910/122814465-37584a00-d2a2-11eb-9264-b6ee4682c53e.gif" alt="">
+                <img src="./Assets/images/WatchHub.PNG" alt="Image for WatchHub Project" style="height: 300px; width: 300px;">
             </a>
-            <p>
-
+            <p style=" width: 300px;">
+                WatchHub is a steamlined search engine that was developed for users to not only gather information on their favorite shows or movies, but also, to watch trailers.
+                <br>
+                <strong>Technologies</strong>: Node js, Expressjs, MySQL, Sequelize ORM
             </p>
-            <ul>
-
-            </ul>
+            
+            <a href="https://github.com/nodrognaes/WatchHub">View GitHub Repo</a>
+            
         </section>
 
         <section class="section-heading">
@@ -112,17 +114,16 @@
                 Skills
             </h2>
         </section>
-        <section class="skills-list">
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>Node.js</li>
-                <li>Express.js</li>
-                <li>Git</li>
-                <li>ReactJS</li>
-                <li>MongoDB</li>
-                <li>MySQL</li>
+        <section >
+            <ul class="skills-list">
+                <li><i class="fab fa-html5 fa-5x spaced-icon"></i></li>
+                <li><i class="fab fa-css3-alt fa-5x spaced-icon"></i></li>
+                <li><i class="fab fa-js-square fa-5x spaced-icon"></i></li>
+                <li><i class="fab fa-node fa-5x spaced-icon"></i></li>
+                <li><i class="fab fa-git fa-5x spaced-icon" ></i></li>
+                <li><i class="fab fa-react fa-5x spaced-icon"></i></li>
+                <li><img src="./Assets/images/mongodb.png" alt="" class="mongo-pic"></li>
+                <li><img src="./Assets/images/icons8-mysql-logo-150.png" alt="" class="mysql-pic"></li>
             </ul>
         </section>
         <section class="section-heading">
