saving changes made to projects section

--- a/index.html
+++ b/index.html
@@ -93,20 +93,54 @@
             </h2>
         </section>
         <section class="project-container right-side">
-            <h3 class="project-title">
-                WatchHub
-            </h3>
-            <a href="https://watchub-jbs.herokuapp.com/" target="_blank">
-                <img src="./Assets/images/WatchHub.PNG" alt="Image for WatchHub Project" style="height: 300px; width: 300px;">
-            </a>
-            <p style=" width: 300px;">
-                WatchHub is a steamlined search engine that was developed for users to not only gather information on their favorite shows or movies, but also, to watch trailers.
+            <section class="divided-portfolios">
+                <h3 class="project-title">
+                    WatchHub
+                </h3>
+                <a href="https://watchub-jbs.herokuapp.com/" target="_blank">
+                    <img src="./Assets/images/WatchHub.PNG" alt="Image for WatchHub Project" style="height: 300px; width: 300px;">
+                </a>
+                <p style=" width: 300px;">
+                    WatchHub is a steamlined search engine that was developed for users to not only gather information on their favorite shows or movies, but also, to watch trailers.
+                    <br>
+                    <br>
+                    <strong>Technologies</strong>: Node js, Expressjs, MySQL, Sequelize ORM
+                </p>
                 <br>
-                <strong>Technologies</strong>: Node js, Expressjs, MySQL, Sequelize ORM
-            </p>
-            
-            <a href="https://github.com/nodrognaes/WatchHub">View GitHub Repo</a>
-            
+                <a href="https://github.com/nodrognaes/WatchHub" class="project-button">View GitHub Repo</a>    
+            </section>
+            <section class="divided-portfolios">
+                <h3 class="project-title">
+                    WatchHub
+                </h3>
+                <a href="https://watchub-jbs.herokuapp.com/" target="_blank">
+                    <img src="./Assets/images/WatchHub.PNG" alt="Image for WatchHub Project" style="height: 300px; width: 300px;">
+                </a>
+                <p style=" width: 300px;">
+                    WatchHub is a steamlined search engine that was developed for users to not only gather information on their favorite shows or movies, but also, to watch trailers.
+                    <br>
+                    <br>
+                    <strong>Technologies</strong>: Node js, Expressjs, MySQL, Sequelize ORM
+                </p>
+                <br>
+                <a href="https://github.com/nodrognaes/WatchHub" class="project-button">View GitHub Repo</a>    
+            </section>
+            <section class="divided-portfolios">
+                <h3 class="project-title">
+                    WatchHub
+                </h3>
+                <a href="https://watchub-jbs.herokuapp.com/" target="_blank">
+                    <img src="./Assets/images/WatchHub.PNG" alt="Image for WatchHub Project" style="height: 300px; width: 300px;">
+                </a>
+                <p style=" width: 300px;">
+                    WatchHub is a steamlined search engine that was developed for users to not only gather information on their favorite shows or movies, but also, to watch trailers.
+                    <br>
+                    <br>
+                    <strong>Technologies</strong>: Node js, Expressjs, MySQL, Sequelize ORM
+                </p>
+                <br>
+                <a href="https://github.com/nodrognaes/WatchHub" class="project-button">View GitHub Repo</a>    
+            </section>
         </section>
 
         <section class="section-heading">
