--- a/index.html
+++ b/index.html
@@ -167,13 +167,16 @@
             </h2>
         </section>
         <section class="contact-form ">
-            <form action="action_page.php">
+            <form action="https://formsubmit.co/bradsamuel97@gmail.com">
 
                 <label for="fname">First Name</label>
                 <input type="text" id="fname" name="firstname" placeholder="Please enter your  first name...">
 
                 <label for="lname">Last Name</label>
                 <input type="text" id="lname" name="lastname" placeholder="Please enter your last name...">
+
+                <label for="email">Email</label>
+                <input type="text" name="email"placeholder="Please enter your email..." required>
 
                 <label for="subject">Message</label>
                 <textarea id="subject" name="subject" placeholder="Ask me anything, I promise I don't bite..." style="height:200px"></textarea>
