--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     I am a developer with a recent certificate in full stack development from Rutgers University.I also have a Bachelor's degree from Penn State University. I am an inquisitive individual that is dedicated to learning new technologies and frameworks while analyzing and solving issues. My ambitious nature is always present when making intuitive and engaging web applications regardless of whether I am alone or contributing to a team.
                     <br>
                     <br>
-                    When I am not coding, I am most likely drawing photorealistic portraits or reading either a fictional or non-fictional book. My current reads are Atomic Habits by James Clear and the graphic novel, Najigahara Holographic by Inio Asano.
+                    When I am not coding, I am most likely drawing photorealistic portraits or reading either a fictional or non-fictional book. My current reads are <i>Atomic Habits</i>by James Clear and the graphic novel, Najigahara Holographic by Inio Asano.
                 </p>
                 <h3>⚡️Hobbies⚡️</h3>
                 <ul>
@@ -134,7 +134,7 @@
                     <img src="./Assets/images/WatchHub.PNG" alt="Image for WatchHub Project" style="height: 300px; width: 300px;">
                 </a>
                 <p style=" width: 300px;">
-                    WatchHub is a steamlined search engine that was developed for users to not only gather information on their favorite shows or movies, but also, to watch trailers.
+                    WatchHub is a streamlined search engine that was developed for users to not only gather information on their favorite shows or movies, but also, to watch trailers.
                     <br>
                     <br>
                     <strong>Technologies</strong>: Node js, Expressjs, MySQL, Sequelize ORM
