saving addition of Dewy description and technologies to projects

--- a/index.html
+++ b/index.html
@@ -112,16 +112,16 @@
             </section>
             <section class="divided-portfolios">
                 <h3 class="project-title">
-                    WatchHub
+                    Dewy
                 </h3>
                 <a href="https://watchub-jbs.herokuapp.com/" target="_blank">
                     <img src="./Assets/images/WatchHub.PNG" alt="Image for WatchHub Project" style="height: 300px; width: 300px;">
                 </a>
                 <p style=" width: 300px;">
-                    WatchHub is a steamlined search engine that was developed for users to not only gather information on their favorite shows or movies, but also, to watch trailers.
+                    Dewy is a skincare application that allows users to take a quiz to curate a specificed skincare routine that suits their needs.
                     <br>
                     <br>
-                    <strong>Technologies</strong>: Node js, Expressjs, MySQL, Sequelize ORM
+                    <strong>Technologies</strong>: MongoDB, Expressjs, React, NodeJs
                 </p>
                 <br>
                 <a href="https://github.com/nodrognaes/WatchHub" class="project-button" target="_blank">View GitHub Repo</a>    
