--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </section>
             <section class="about-content right-side section-space">
                 <p>
-                    I am a developer with a recent certificate in full stack development from Rutgers University.I also have a Bachelor's degree from Penn State University. I am an inquisitive individual that is dedicated to learning new technologies and frameworks while analyzing and solving issues. My ambitious nature is always present when making intuitive and engaging web applications regardless of whether I am alone or contributing to a team.
+                    I am a developer with a recent certificate in full stack development from Rutgers University. I also have a Bachelor's degree from Penn State University. I am an inquisitive individual that is dedicated to learning new technologies and frameworks while analyzing and solving issues. My ambitious nature is always present when making intuitive and engaging web applications regardless of whether I am alone or contributing to a team.
                     <br>
                     <br>
                     When I am not coding, I am most likely drawing photorealistic portraits or reading either a fictional or non-fictional book. My current reads are <i>Atomic Habits</i>by James Clear and the graphic novel, Najigahara Holographic by Inio Asano.
@@ -99,8 +99,10 @@
                     WatchHub
                 </h3>
                 <a href="https://watchub-jbs.herokuapp.com/" target="_blank">
-                    <img src="./Assets/images/WatchHub.PNG" alt="Image for WatchHub Project" style="height: 300px; width: 300px;">
+                    <img src="./Assets/images/WatchHub.PNG" alt="Image for WatchHub Project" style="height: 300px; width: 300px;" class="grow">
                 </a>
+                <br>
+                <br>
                 <p style=" width: 300px;">
                     WatchHub is a steamlined search engine that was developed for users to not only gather information on their favorite shows or movies, but also, to watch trailers.
                     <br>
@@ -114,33 +116,37 @@
                 <h3 class="project-title">
                     Dewy
                 </h3>
-                <a href="https://watchub-jbs.herokuapp.com/" target="_blank">
-                    <img src="./Assets/images/WatchHub.PNG" alt="Image for WatchHub Project" style="height: 300px; width: 300px;">
+                <a href="#" target="_blank">
+                    <img src="https://images.pexels.com/photos/4259092/pexels-photo-4259092.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Image for WatchHub Project" style="height: 300px; width: 300px;" class="grow">
                 </a>
+                <br>
+                <br>
                 <p style=" width: 300px;">
-                    Dewy is a skincare application that allows users to take a quiz to curate a specificed skincare routine that suits their needs.
+                    Dewy is a skincare application that allows users to take a quiz to curate a specificed skincare routine that suits their needs. (In-Progess)
                     <br>
                     <br>
                     <strong>Technologies</strong>: MongoDB, Expressjs, React, NodeJs
                 </p>
                 <br>
-                <a href="https://github.com/nodrognaes/WatchHub" class="project-button" target="_blank">View GitHub Repo</a>    
+                <a href="https://github.com/Brad-Sam25/Dewy" class="project-button" target="_blank">View GitHub Repo</a>    
             </section>
             <section class="divided-portfolios">
                 <h3 class="project-title">
-                    WatchHub
+                    KB Biggening
                 </h3>
-                <a href="https://watchub-jbs.herokuapp.com/" target="_blank">
-                    <img src="./Assets/images/WatchHub.PNG" alt="Image for WatchHub Project" style="height: 300px; width: 300px;">
+                <a href="#" target="_blank">
+                    <img src="https://images.pexels.com/photos/1552252/pexels-photo-1552252.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Image for WatchHub Project" style="height: 300px; width: 300px;" class="grow">
                 </a>
+                <br>
+                <br>
                 <p style=" width: 300px;">
-                    WatchHub is a streamlined search engine that was developed for users to not only gather information on their favorite shows or movies, but also, to watch trailers.
+                    This workout application allows users to track their workouts and dieting. (In-Progess)
                     <br>
                     <br>
-                    <strong>Technologies</strong>: Node js, Expressjs, MySQL, Sequelize ORM
+                    <strong>Technologies</strong>: Java, Maven, Spring Boot, React, and Redux.
                 </p>
                 <br>
-                <a href="https://github.com/nodrognaes/WatchHub" class="project-button" target="_blank">View GitHub Repo</a>    
+                <a href="https://github.com/kevin-salamon/SpringBoot-React" class="project-button" target="_blank">View GitHub Repo</a>    
             </section>
         </section>
 
@@ -189,7 +195,7 @@
         <p>
             Copyright Brad Samuel © 2021 All rights received.
         </p>
-        <a class="project-button" href="">Download CV</a>
+        <a class="project-button" href="./Assets/docs/Updated Official Resume.docx.pdf" download="current_resume">Download CV</a>
     </footer>
 </body>
 </html>
