saving chnages made to media screens

--- a/index.html
+++ b/index.html
@@ -9,18 +9,6 @@
     <script src="https://kit.fontawesome.com/012e94325c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header class="header-banner right-side" id="home">
-        <h1>
-            Welcome <span class="emoji">👋🏾</span> my name is 
-            <br>
-            Brad Samuel.
-        </h1>
-        <h1 class="developer">
-            I'm a developer based 
-            <br>
-            in New Jersey
-        </h1>
-    </header>
     <nav class="side-nav">
         <ul>
             <li >
@@ -59,6 +47,18 @@
             </ul>
         </section>
     </nav>
+    <header class="header-banner right-side" id="home">
+        <h1>
+            Welcome <span class="emoji">👋🏾</span> my name is 
+            <br>
+            Brad Samuel.
+        </h1>
+        <h1 class="developer">
+            I'm a developer based 
+            <br>
+            in New Jersey
+        </h1>
+    </header>
     <main>
         <section class="about-section">
             <section class="section-heading">
@@ -99,54 +99,54 @@
                     WatchHub
                 </h3>
                 <a href="https://watchub-jbs.herokuapp.com/" target="_blank">
-                    <img src="./Assets/images/WatchHub.PNG" alt="Image for WatchHub Project" style="height: 300px; width: 300px;" class="grow">
+                    <img src="./Assets/images/WatchHub.PNG" alt="Image for WatchHub Project" style="height: 300px; width: 300px;" class="grow prj">
                 </a>
                 <br>
                 <br>
-                <p style=" width: 300px;">
+                <p style=" width: 300px;" class="prj">
                     WatchHub is a steamlined search engine that was developed for users to not only gather information on their favorite shows or movies, but also, to watch trailers.
                     <br>
                     <br>
                     <strong>Technologies</strong>: Node js, Expressjs, MySQL, Sequelize ORM
                 </p>
                 <br>
-                <a href="https://github.com/nodrognaes/WatchHub" class="project-button" target="_blank">View GitHub Repo</a>    
+                <a href="https://github.com/nodrognaes/WatchHub" class="project-button prj" target="_blank">View GitHub Repo</a>    
             </section>
             <section class="divided-portfolios">
                 <h3 class="project-title">
                     Dewy
                 </h3>
                 <a href="#" target="_blank">
-                    <img src="https://images.pexels.com/photos/4259092/pexels-photo-4259092.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Image for WatchHub Project" style="height: 300px; width: 300px;" class="grow">
+                    <img src="https://images.pexels.com/photos/4259092/pexels-photo-4259092.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Image for WatchHub Project" style="height: 300px; width: 300px;" class="grow prj">
                 </a>
                 <br>
                 <br>
-                <p style=" width: 300px;">
+                <p style=" width: 300px;" class="prj">
                     Dewy is a skincare application that allows users to take a quiz to curate a specificed skincare routine that suits their needs. (In-Progess)
                     <br>
                     <br>
                     <strong>Technologies</strong>: MongoDB, Expressjs, React, NodeJs
                 </p>
                 <br>
-                <a href="https://github.com/Brad-Sam25/Dewy" class="project-button" target="_blank">View GitHub Repo</a>    
+                <a href="https://github.com/Brad-Sam25/Dewy" class="project-button prj" target="_blank">View GitHub Repo</a>    
             </section>
             <section class="divided-portfolios">
                 <h3 class="project-title">
                     KB Biggening
                 </h3>
                 <a href="#" target="_blank">
-                    <img src="https://images.pexels.com/photos/1552252/pexels-photo-1552252.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Image for WatchHub Project" style="height: 300px; width: 300px;" class="grow">
+                    <img src="https://images.pexels.com/photos/1552252/pexels-photo-1552252.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Image for WatchHub Project" style="height: 300px; width: 300px;" class="grow prj">
                 </a>
                 <br>
                 <br>
-                <p style=" width: 300px;">
+                <p style=" width: 300px;" class="prj">
                     This workout application allows users to track their workouts and dieting. (In-Progess)
                     <br>
                     <br>
                     <strong>Technologies</strong>: Java, Maven, Spring Boot, React, and Redux.
                 </p>
                 <br>
-                <a href="https://github.com/kevin-salamon/SpringBoot-React" class="project-button" target="_blank">View GitHub Repo</a>    
+                <a href="https://github.com/kevin-salamon/SpringBoot-React" class="project-button prj" target="_blank">View GitHub Repo</a>    
             </section>
         </section>
 
