--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brad's Portfolio</title>
+    <title>Brad Samuel</title>
     <link rel="stylesheet" href="./Assets/css/stylesheet.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="./Assets/fav-icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./Assets/fav-icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./Assets/fav-icon/favicon-16x16.png">
+    <link rel="manifest" href="./Assets/images/site.webmanifest">
     <script src="https://kit.fontawesome.com/012e94325c.js" crossorigin="anonymous"></script>
 </head>
 <body>
