saving initial changes made to readme

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </section>
             <section class="about-content right-side section-space">
                 <p>
-                    I am a developer with a recent certificate in full stack development from Rutgers University. I also have a Bachelor's degree from Penn State University. I am an inquisitive individual that is dedicated to learning new technologies and frameworks while analyzing and solving issues. My ambitious nature is always present when making intuitive and engaging web applications regardless of whether I am alone or contributing to a team.
+                    I am a Web Developer with a recent certificate in Full Stack Web Development from Rutgers University. I also have a Bachelor's degree from Penn State University. I am an inquisitive individual that is dedicated to learning new technologies and frameworks while analyzing and solving issues. My ambitious nature is always present when making intuitive and engaging web applications regardless of whether I am alone or contributing to a team.
                     <br>
                     <br>
                     When I am not coding, I am most likely drawing photorealistic portraits or reading either a fictional or non-fictional book. My current reads are <i>Atomic Habits</i>by James Clear and the graphic novel, Najigahara Holographic by Inio Asano.
