saving changes made to readMe and resume button

--- a/index.html
+++ b/index.html
@@ -196,10 +196,11 @@
         </section>
     </main>
     <footer class="right-side">
+        <a class="project-button" href="./Assets/docs/Updated Official Resume.docx.pdf" download="current_resume">Download Resume</a>
+        <br />
         <p>
             Copyright Brad Samuel © 2021 All rights received.
         </p>
-        <a class="project-button" href="./Assets/docs/Updated Official Resume.docx.pdf" download="current_resume">Download CV</a>
     </footer>
 </body>
 </html>
