--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             </h2>
         </section>
         <section class="contact-form ">
-            <form action="https://formsubmit.co/bradsamuel97@gmail.com">
+            <form action="https://formsubmit.co/bradsamuel97@gmail.com" method="POST">
 
                 <label for="fname">First Name</label>
                 <input type="text" id="fname" name="firstname" placeholder="Please enter your  first name...">
