--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
                 <label for="subject">Message</label>
                 <textarea id="subject" name="subject" placeholder="Ask me anything, I promise I don't bite..." style="height:200px"></textarea>
 
-                <input type="submit" value="Submit">
+                <!-- <input type="submit" value="Submit"> -->
+                <button type="submit">Send</button>
             </form>
         </section>
     </main>
