updating button from input

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <textarea id="subject" name="subject" placeholder="Ask me anything, I promise I don't bite..." style="height:200px"></textarea>
 
                 <!-- <input type="submit" value="Submit"> -->
-                <button type="submit">Send</button>
+                <button type="submit">Submit</button>
             </form>
         </section>
     </main>
