--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="#contact" class="nav-buttons">Contact</a>
             </li>
             <li>
-                <a href="./Assets/docs/Updated Official Resume.docx.pdf" download="current_resume" class="nav-buttons">Resume</a>
+                <a href="./Assets/docs/resume.pdf" download="resume" class="nav-buttons">Resume</a>
             </li>
         </ul>
         <section class="socials-container">
